@@ -1,3 +1,8 @@
+2005-01-07 Alain Magloire
+	Fix PR 82202
+	* model/org/eclipse/cdt/internal/core/model/CElement.java
+	* model/org/eclipse/cdt/internal/core/model/Openable.java
+	
 2004-12-22 Alain Magloire
 
 	On going work to clean cdt.ui from misc. warnings
